# Zinvul

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: googletest.cmake  option.cmake  project.cmake
document/: CMakeLists.txt
example/: CMakeLists.txt  device_example.cpp  kernel_example.cpp  platform_example.cpp  vulkan_device_info_example.cpp  vulkan_sub_platform_example.cpp
example/kernels/: example.cl
source/template/: kernel_group.cpp.in  kernel_group.hpp.in
source/zinvul/: CMakeLists.txt  config.cmake  document.dox
source/zinvul/cmake/: bake_command.cmake  kernel.cmake
source/zinvul/kernel_baker/: CMakeLists.txt  kernel_baker.cpp
source/zinvul/python/: bake_spirv_command.py
source/zinvul/template/: baked_spirv.hpp.in  kernel_group.cl.in  kernel_group.hpp.in  kernel_set.cl.in  kernel_set.cmake.in  kernel_set.cpp.in  kernel_set.hpp.in
source/zinvul/zinvul/: buffer-inl.hpp  buffer.hpp  device-inl.hpp  device.cpp  device.hpp  device_info.cpp  device_info.hpp  device_options-inl.hpp  device_options.hpp  kernel-inl.hpp  kernel.hpp  kernel_arg_parser-inl.hpp  kernel_arg_parser.hpp  kernel_group-inl.hpp  kernel_group.hpp  kernel_set-inl.hpp  kernel_set.hpp  mapped_memory-inl.hpp  mapped_memory.hpp  platform-inl.hpp  platform.cpp  platform.hpp  platform_options-inl.hpp  platform_options.hpp  sub_platform-inl.hpp  sub_platform.cpp  sub_platform.hpp  zinvul-inl.hpp  zinvul.cpp  zinvul.hpp  zinvul_config-inl.hpp  zinvul_config-inl.hpp.in  zinvul_config.hpp  zinvul_config.hpp.in  zinvul_initialization.hpp
source/zinvul/zinvul/cl/: algorithm-inl.cl  algorithm.cl  array-inl.cl  array.cl  atomic-inl.cl  atomic.cl  correlated_multi_jittered_engine-inl.cl  correlated_multi_jittered_engine.cl  floating_point-inl.cl  floating_point.cl  fnv_1a_hash_engine-inl.cl  fnv_1a_hash_engine.cl  geometric-inl.cl  geometric.cl  geometry-inl.cl  geometry.cl  hash_engine-inl.cl  hash_engine.cl  limits-inl.cl  limits.cl  math-inl.cl  math.cl  math_const-inl.cl  math_const.cl  matrix.cl  memory_fence-inl.cl  memory_fence.cl  relational-inl.cl  relational.cl  rng.cl  synchronization-inl.cl  synchronization.cl  type_traits-inl.cl  type_traits.cl  types-inl.cl  types.cl  utility-inl.cl  utility.cl  vector_data-inl.cl  vector_data.cl  (+2 more)
source/zinvul/zinvul/cppcl/: address_space_pointer-inl.hpp  address_space_pointer.hpp  algorithm-inl.hpp  algorithm.hpp  atomic-inl.hpp  atomic.hpp  geometric-inl.hpp  geometric.hpp  geometry-inl.hpp  geometry.hpp  math-inl.hpp  math.hpp  memory_fence.hpp  relational-inl.hpp  relational.hpp  synchronization.hpp  types.hpp  utility-inl.hpp  utility.cpp  utility.hpp  vector-inl.hpp  vector.hpp
source/zinvul/zinvul/cpu/: cpu_buffer-inl.hpp  cpu_buffer.hpp  cpu_device-inl.hpp  cpu_device.cpp  cpu_device.hpp  cpu_device_info.cpp  cpu_device_info.hpp  cpu_kernel-inl.hpp  cpu_kernel.hpp  cpu_sub_platform-inl.hpp  cpu_sub_platform.cpp  cpu_sub_platform.hpp
source/zinvul/zinvul/utility/: id_data-inl.hpp  id_data.hpp  kernel_arg_parser-inl.hpp  kernel_arg_parser.hpp  kernel_init_parameters-inl.hpp  kernel_init_parameters.hpp  mapped_memory-inl.hpp  mapped_memory.hpp  zinvul_object-inl.hpp  zinvul_object.cpp  zinvul_object.hpp
source/zinvul/zinvul/vulkan/: vulkan_buffer-inl.hpp  vulkan_buffer.hpp  vulkan_device-inl.hpp  vulkan_device.cpp  vulkan_device.hpp  vulkan_device_info-inl.hpp  vulkan_device_info.cpp  vulkan_device_info.hpp  vulkan_kernel-inl.hpp  vulkan_kernel.hpp  vulkan_physical_device_info-inl.hpp  vulkan_physical_device_info.hpp  vulkan_sub_platform-inl.hpp  vulkan_sub_platform.cpp  vulkan_sub_platform.hpp
source/zinvul/zinvul/vulkan/utility/: vulkan.hpp  vulkan_dispatch_loader-inl.hpp  vulkan_dispatch_loader.cpp  vulkan_dispatch_loader.hpp  vulkan_initialization.cpp
test/: CMakeLists.txt  config.cmake
test/kernels/algorithm/: algorithm.cl
test/kernels/atomic/: atomic.cl
test/kernels/built_in_func/: atomic.cl  relational.cl  vector.cl  work_item.cl
test/kernels/data/: data.cl  vector.cl
test/kernels/experiment/: experiment.cl
test/kernels/geometric/: geometric.cl
test/kernels/geometry/: geometry.cl
test/kernels/math/: math.cl  math_function.cl  matrix.cl  power.cl
test/kernels/matrix/: matrix.cl
test/kernels/relational/: relational.cl
test/kernels/rng/: rng.cl
test/kernels/vector/: vector.cl
test/kernels/vector_data/: vector_data.cl
test/kernels/work_item/: work_item.cl
test/scripts/: run_test_unix.sh  run_test_win.cmd
test/unittest/: algorithm_test.cpp  atomic_test.cpp  built_in_func_test.cpp  data_test.cpp  geometric_test.cpp  geometry_test.cpp  math_test.cpp  matrix_test.cpp  relational_test.cpp  rng_test.cpp  test.cpp  test.hpp  unittest.cpp  vector_data_test.cpp  vector_test.cpp  work_item_test.cpp  zinvul_test.cpp
